k8s_intro/simple-service-node.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-node
spec:
  type: NodePort
  selector:
    app: echo
  ports:
  - name: http
    port: 80
