k8s_intro/simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-ser
spec:
  selector:
    app: echo
  ports:
  - name: http
    port: 80
