k8s_intro/simple-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ing
spec:
  rules:
  - host: ch05.elnath
    http:
      paths:
      - path: /
        backend:
          serviceName: echo-ser
          servicePort: 80
